--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "dev-portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.9.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
