--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "tailwindcss": "^1.7.2"
   },
   "scripts": {
-    "start": "npm run build:style && react-scripts start",
+    "dev": "react-scripts start",
+    "start": "node index.js && npm run build:style && react-scripts start && serve -s build",
     "build:style": "tailwind build src/styles/index.scss -o src/styles/tailwind.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
