--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "14.9.0"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
@@ -15,6 +16,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
     "framer-motion": "^2.5.5",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
@@ -27,7 +29,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "node ./index.js && npm run build:style && react-scripts start && serve -s build",
+    "start": "npm run build:style && serve -s build",
     "build:style": "tailwind build src/styles/index.scss -o src/styles/tailwind.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
