--- a/package.json
+++ b/package.json
@@ -3,33 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
+    "npm": "6.14.7",
     "node": "14.9.0"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "autoprefixer": "^9.8.6",
-    "cssnano": "^4.1.10",
-    "framer-motion": "^2.5.5",
-    "node-sass": "^4.14.1",
-    "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-use": "^15.3.3",
+    "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
+    "framer-motion": "^2.5.5",
+    "node-sass": "^4.14.1",
+    "postcss-cli": "^7.1.1",
+    "serve": "^11.3.2",
     "tailwindcss": "^1.7.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "npm run build:style && react-scripts build",
+    "start": "npm run build:style && react-scripts start",
     "build:style": "tailwind build src/styles/index.scss -o src/styles/tailwind.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
