--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1",
-    "react-use": "^15.3.3",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "framer-motion": "^2.5.5",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
+    "react-use": "^15.3.3",
     "serve": "^11.3.2",
-    "tailwindcss": "^1.7.2"
+    "tailwindcss": "^1.7.2",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "npm run build:style && react-scripts start",
