add heroku buildpack

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "npm run build:style && react-scripts start",
+    "dev": "react-scripts start",
+    "start": "npm run build:style && serve -s build",
     "build:style": "tailwind build src/styles/index.scss -o src/styles/tailwind.scss",
     "build": "react-scripts build",
     "test": "react-scripts test",
